# kaixi_crospi_ws

./: README.md  signalflow.mmd
.claude/: settings.json
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/betfsm/lib/betfsm/: web_server
install/betfsm/share/betfsm/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/betfsm_demos/lib/betfsm_demos/: example_action_server  example_action_server2  example_graphviz  test_ea
install/betfsm_demos/share/betfsm_demos/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/betfsm_interfaces/share/betfsm_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  (+5 more)
install/crospi_core/include/: IO_handlers_deleteme.hpp  featurevariableinitializer.hpp  port_observer.hpp
install/crospi_default_plugins/include/: DELETEME_fileoutputhandlerfactory.hpp  DELETEME_jointstateoutputhandlerfactory.hpp  DELETEME_tfoutputhandlerfactory.hpp  DELETEME_topicoutputhandlerfactory.hpp
install/etasl_wrapper/include/: qpOASES.hpp
log/: latest_build  latest_info  latest_list
memory/: MEMORY.md  project_crospi_lerobot_integration.md  project_vla_shared_control_architecture.md
src/crospi_application_template/: .gitignore  generate_json_schemas_tasks.bash
src/crospi_application_template/example_nodes/: rviz_publisher.py  vla_ros_bridge_node.py
src/crospi_application_template/task_specifications/: tasks-schema.json
src/trossen_arm_description/urdf/: mobile_ai.urdf.xacro
src/trossen_widowx_interfaces/: CMakeLists.txt  README.md  package.xml
src/trossen_widowx_interfaces/srv/: ControlGripper.srv  JointModes.srv
src/widowx_etasl/: CMakeLists.txt  crospi_bridge.py  crospi_starter.py  package.xml
src/widowx_etasl/config/: widowx_sim.setup.json
src/widowx_etasl/launch/: pick_ball_sim.launch.py
src/widowx_etasl/tasks/: move_to_target.lua  pick_ball.lua
(+1143 files in other folders)
