<?xml version="1.0"?>
<package format="3">
  <name>widowx_etasl</name>
  <version>0.0.1</version>
  <description>eTaSL tasks for WidowX AI arm</description>
  <maintainer email="user@example.com">Your Name</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>crospi_core</exec_depend>
  <ament_cmake_python_package/>
</package>