<?xml version="1.0"?>
<package format="3">
  <name>widowx_etasl</name> <!-- 功能包名称，必须与目录名一致 -->
  <version>0.0.1</version>
  <description>eTaSL tasks for WidowX AI arm</description>
  <maintainer email="user@example.com">Your Name</maintainer>
  <license>MIT</license>
  <!-- 构建工具依赖，使用ROS 2的ament_cmake构建系统 -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- 运行时依赖，需要同工作空间中的 crospi_core 包 -->
  <exec_depend>crospi_core</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>